LogglyTransport: send logs to LogglyAPI
using bulk api endpoint

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "Edan Schwartz <edanschwartz@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "co": "^4.6.0",
+    "lodash": "^4.13.1",
+    "loggly": "^1.1.0",
     "rx": "^4.1.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
+    "nock": "^8.0.0",
+    "sinon": "^1.17.4",
     "sinon-clock-singleton": "^1.0.0"
   }
 }
